--- a/index.html
+++ b/index.html
@@ -9,26 +9,26 @@
 			border: 2px dotted black;
 			padding: 10px 10px 10px 10px;
 			font-family: sans-serif;
-		}	
+			}	
 	</style>
 </head>
 
 <body>
-	<h1>Starbuzz Coffee Beverages</h1>
 
-	<h2>House Blend, $1.49</h2>
-	<p>A smooth, mild blend of coffees from Mexico, Bolivia and Guatemala.</p>
-
-	<h2>Mocha Caffe Latte, $2.35</h2>
-	<p>Espresso, steamed milk and chocolate syrup.</p>
-
-	<h2>Cappuccino, $1.89</h2>
-	<p>A mixture of espresso, steamed milk and milk foam.</p>
-
-	<h2>Chai Tea, $1.85</h2>
-	<p>A spicy drink made with black tea, spices, milk and honey.</p>
+	<h1>Напитки кафе Starbuzz</h1>
+	<h2>Домашняя смесь, $1,49</h2>
+		<p>Мягкая, нетерпкая смесь различных сортов кофе из Мексики, Боливии и Гватемалы.</p>
+	<h2>Кофе мокко, $2,35</h2>
+		<p>Эспрессо, кипяченое молоко и шоколадный сироп.</p>
+	<h2>Капучино, $1,89</h2>
+		<p>Смесь эспрессо и кипяченого молока с добавлением пены.</p>
+	<h2>Чай, $1,85</h2>
+		<p>Ароматный напиток из черного чая, специй, молока и меда.</p>
+	<p>
+		<a href="mission.html">Ознакомьтесь с нашей задачей</a><br>
+		Читайте <a href="http://wickedlysmart.com/buzz">Все о кофеине</a> здесь
+	</p>
 	
-	<p><a href="mission.html">Make for added href</a></p>
 </body>
 </html>
 
