--- a/mission.html
+++ b/mission.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Starbuzz Coffee's Mission</title>
+    <title>Задача Starbuzz Coffee's</title>
         <style type="text/css">
           body {
               background-color: #10a502;
@@ -13,9 +13,9 @@
         </style>
   </head> 
   <body>
-    <h1>Starbuzz Coffee's Mission</h1>
-      <p>To provide all the caffeine that you need to power your life.</p>
-      <p>Just drink it.</p>
-      <p><a href="index.html">Back to home</a></p>
+    <h1>Задача Starbuzz Coffee's</h1>
+      <p>Обеспечить кофеином необходимым для поддержания вашей жизненной энергии</p>
+      <p>Просто выпейте это.</p>
+      <p><a href="index.html">Вернуться на главную</a></p>
   </body>
 </html>
