--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<title>Starbuzz Coffee</title>
 	<style>
 		body {
-			background-color: #10a502;
+			background-color: #a3773d;
 			margin-left: 20%;
 			margin-right: 20%;
 			border: 2px dotted black;
@@ -22,11 +22,12 @@
 		<p>Эспрессо, кипяченое молоко и шоколадный сироп.</p>
 	<h2>Капучино, $1,89</h2>
 		<p>Смесь эспрессо и кипяченого молока с добавлением пены.</p>
-	<h2>Чай, $1,85</h2>
+	<h2 id="chai">Чай, $1,85</h2>
 		<p>Ароматный напиток из черного чая, специй, молока и меда.</p>
 	<p>
-		<a href="mission.html">Ознакомьтесь с нашей задачей</a><br>
-		Читайте <a href="http://wickedlysmart.com/buzz">Все о кофеине</a> здесь
+		<a href="mission.html" title="Узнайте больше о важной
+		задаче кафе Starbuzz">Наша задача</a><br>
+		Читайте <a target="_blank" href="http://wickedlysmart.com/buzz#Coffee" title="Все самое интересное о кофеине">Все о кофеине</a> здесь
 	</p>
 	
 </body>
