--- a/mission.html
+++ b/mission.html
@@ -3,7 +3,7 @@
     <title>Задача Starbuzz Coffee's</title>
         <style type="text/css">
           body {
-              background-color: #10a502;
+              background-color: #a3773d;
               margin-left: 20%;
               margin-right: 20%;
               border: 2px dotted black;
@@ -14,7 +14,7 @@
   </head> 
   <body>
     <h1>Задача Starbuzz Coffee's</h1>
-      <p>Обеспечить кофеином необходимым для поддержания вашей жизненной энергии</p>
+      <p>Обеспечить кофеином, так необходимого для поддержания вашей жизненной энергии</p>
       <p>Просто выпейте это.</p>
       <p><a href="index.html">Вернуться на главную</a></p>
   </body>
