--- a/mission.html
+++ b/mission.html
@@ -1,16 +1,9 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Задача Starbuzz Coffee's</title>
-        <style type="text/css">
-          body {
-              background-color: #a3773d;
-              margin-left: 20%;
-              margin-right: 20%;
-              border: 2px dotted black;
-              padding: 10px 10px 10px 10px;
-              font-family: sans-serif;
-               }	
-        </style>
+	<head>
+		<meta charset="utf-8">
+		<title>Starbuzz Coffee</title>
+		<link type="text/css" rel="stylesheet" href="starbuzz.css">
   </head> 
   <body>
     <h1>Задача Starbuzz Coffee's</h1>
