--- a/index.html
+++ b/index.html
@@ -7,12 +7,22 @@
 	</head>
 
 	<body>
-		<header>
+		<header class="top">
 			<img id="headerLogo" src="images/headerLogo.gif" 
 			alt="Starbuzz Coffee logo image">
 			<img id="headerSlogan" src="images/headerSlogan.gif" 
 			alt="Providing all the caffeine you need to power your life.">
 		</header>
+		
+		<nav>
+			<ul>
+				<li><a href="index.html">ДОМОЙ</a></li>
+				<li class="selected"><a href="blog.html">БЛОГ</a></li>
+				<li><a href="inventions.html">ИЗОБРЕТЕНИЯ</a></li>
+				<li><a href="recipes.html">РЕЦЕПТЫ</a></li>
+				<li><a href="address.html">АДРЕСА</a></li>
+			</ul>
+		</nav>
 
 		<div id="award">
 			<img src="images/award.gif" alt="Награда обжарщику кофейных серен года">
