--- a/form.html
+++ b/form.html
@@ -4,67 +4,90 @@
 		<meta charset="utf-8">
 		<title>Starbuzz Bean Machine</title>
 		<link type="text/css" rel="stylesheet" href="starbuzz.css">
+		<link type="text/css" rel="stylesheet" href="styledform.css">
 	</head>
 
-	<body>
+	<body style="margin: 8px;">
 		<h1>Starbuzz Bean Machine</h1>
 		<h2>Заполните следующую форму и нажмите кнопку «Заказать сейчас», чтобы оформить заказ</h2>
-		<form action="http://starbuzzcoffee.com/processorder.php" method="POST"></form>
-			<p>
-				Выберите кофе: 
-				<select name="characters">
-					<option value="Home">Домашняя смесь</option>
-					<option value="Bolivia">Боливия</option>
-					<option value="Guatemala">Гватемала</option>
-					<option value="Kenya">Кения</option>
-				</select>
-			</p>
-			<p>
-				Тип: <br/>
-				<input type="radio" name="grind" auto value="beans"/>Кофе в зернах<br/>
-				<input type="radio" name="grind" value="ground"/>Молотый
-			</p>
-			<p>
-				Дополнительные услуги: <br/>
-				<input type="checkbox" name="services" value="box"> Подарочная упаковка<br/>
-				<input type="checkbox" name="services" value="catalog"> Доставка каталога вместе с заказом
-			</p>
-			<table>
-				<thead id="client_form">
-					<tr>
-						<th colspan="2">Доставить по адресу:</th>  
-					</tr>
-				</thead>
-				<tr>
-					<td>Имя: </td>
-					<td><input type="text" name="name"/></td>
-				</tr>					
-				<tr>
-					<td>Адрес:</td>
-					<td><input type="text" name="address"/></td>
-				</tr>
-				<tr>
-					<td>Город:</td>						
-					<td><input type="text" name="city"/></td>
-				</tr>
-				<tr>
-					<td>Страна:</td>
-					<td><input type="text" name="country"/></td>
-				</tr>
-				<tr>
-					<td>Почтовый индекс:</td>
-					<td><input type="text" name="zip"/></td>
-				</tr>
-				<tr>
-					<td>Телефон:</td>
-					<td><input type="tel" name="phone"/></td>
-				</tr>
-				<tr>
-					<td>Комментарии клентов:</td>
-					<td><textarea name="comments" rows="10" cols="48"></textarea></td>
-				</tr>					
-			<table>
-			<input type="submit" value="Заказать сейчас"/>
+		<form action="http://starbuzzcoffee.com/processorder.php" method="post">
+			<div class="tableRow">
+				<p>
+					Выберите кофе:
+				</p>
+				<p>
+					<select name="beans">
+						<option value="Домашняя смесь">Домашняя смесь</option>
+						<option value="Боливия">Боливия</option>
+						<option value="Гватемала">Гватемала</option>
+						<option value="Кения">Кения</option>
+					</select>
+				</p>
+			</div>
+			<div class="tableRow">
+				<p>Тип:</p>
+				<p>
+					<input type="radio" id="whole_beantype" name="beantype" value="зерна">
+					<label for="whole_beantype">Кофе в зернах</label><br>
+					<input type="radio" id="ground_beantype" name="beantype" value="молотый" checked>
+					<label for="ground_beantype">Молотый кофе</label>
+				</p>
+			</div>
+			<div class="tableRow">
+				<p><label for="bags">Количество пакетиков:</label></p>
+				<p><input type="number" id="bags" name="bags" min="1" max="10" required></p>
+			</div>
+			<div class="tableRow">
+				<p>Доставить к указанной дате:</p>
+				<p><input type="date" name="date"></p>
+			</div>
+			<div class="tableRow">
+				<p>Дополнительные услуги:</p>
+				<p>
+					<input type="checkbox" name="extras[]" value="подарочная упаковка">
+					Подарочная упаковка<br>
+					<input type="checkbox" name="extras[]" value="каталог" checked>
+					Доставка каталога вместе с заказом
+				</p>
+			</div>
+			<div class="tableRow">
+				<p class="heading">Доставить по адресу:</p>
+				<p></p>
+			</div>
+			<div class="tableRow">
+				<p>Имя:</p>
+				<p><input type="text" name="name" value="" placeholder="Джонатан Картер" required></p>
+			</div>
+			<div class="tableRow">
+				<p>Адрес:</p>
+				<p><input type="text" name="address" value="" placeholder="Области тьмы 25, кв 16" required></p>
+			</div>
+			<div class="tableRow">
+				<p>Город:</p>
+				<p><input type="text" name="city" value="" placeholder="Майами" required></p>
+			</div>
+			<div class="tableRow">
+				<p>Страна:</p>
+				<p><input type="text" name="state" value="" placeholder="Флорида" required></p>
+			</div>
+			<div class="tableRow">
+				<p>Почтовый индекс:</p>
+				<p><input type="text" name="zip" value="" placeholder="123456" required></p>
+			</div>
+			<div class="tableRow">
+				<p>Телефон:</p>
+				<p><input type="tel" name="phone" value="" placeholder="99999999999" required></p>
+			</div>
+			<div class="tableRow">
+				<p>Комментарии клиентов:</p>
+				<p>
+					<textarea name="comments" rows="10" cols="48"></textarea>
+				</p>
+			</div>
+			<div class="tableRow">
+				<p></p>
+				<p><input type="submit" value="Заказать сейчас"></p>
+			</div>
 		</form>
     </body>
 	
